--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 "https://tomp.app/",
                 "https://phantomnetwork.cloud/bare/",
                 "https://artclass.site/bare/",
-                "https://shuttleproxy.com/bare/"
+                "wss://factwiki.me.cdn.cloudflare.net/wisp/"
             ]
         };
 
