--- a/index.html
+++ b/index.html
@@ -1,84 +1,37 @@
-<!DOCTYPE html>
-<html>
+<!-- Подключаем скрипты в head или перед основным кодом -->
+<script src="baremux/index.js"></script>
+<script src="uv/uv.bundle.js"></script>
+<script src="uv/uv.config.js"></script>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Ultraviolet | Sophisticated Web Proxy</title>
-    <meta name="description" content="Ultraviolet is a highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers. Unblock sites today!" />
-    <meta name="keywords" content="proxy, web proxy, ultraviolet, service workers, unblock websites, unblock chromebook, free web proxy, proxy list, proxy sites, un block chromebook, online proxy, proxy server, proxysite, proxy youtube, bypass securly, bypass iboss, bypass lightspeed filter, holy unblocker, chromebooks, titanium network, unblock youtube, youtube proxy, unblocked youtube, youtube unblocked">
-    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#434c5e">
-    <meta name="googlebot" content="index, follow, snippet" />
-    <link href="index.css" rel="stylesheet">
-    <style>
-        /* Apply CSS styles to the dropdown */
-        #bareServerSelect {
-            width: 200px;
-        }
+<!-- Твой основной скрипт управления -->
+<script>
+  async function setupWisp() {
+    // 1. Инициализируем соединение с воркером bare-mux
+    const connection = new BareMux.BareMuxConnection("/baremux/worker.js");
 
-        body {
-            color: white;
-        }
-    </style>
-</head>
+    // 2. УКАЖИ ЗДЕСЬ СВОЙ WISP СЕРВЕР
+    const wispUrl = "wss://твой-висп-сервер.com/wisp/"; 
 
-<body>
-    <h1 style="text-align: center;" title="Ultraviolet supports YouTube, GeForce NOW and more! Service by TitaniumNetwork.">OutRed Static Proxy</h1>
-    <div title="Ultraviolet uses the power of service-workers and more! Unblock many sites today with Ultraviolet!" class="desc">
-        <p>Ultraviolet is highly sophisticated proxy used for evading internet censorship.</p>
-    </div>
+    // 3. Устанавливаем транспорт Epoxy (он работает с Wisp)
+    if (!(await connection.getTransport())) {
+        await connection.setTransport("/epoxy/index.mjs", [{ wisp: wispUrl }]);
+    }
+    console.log("Wisp подключен!");
+  }
 
-    <center><!-- Dropdown menu -->
-    <select id="bareServerSelect">
-        <!-- Options will be populated dynamically using JavaScript -->
-    </select></center><br>
+  setupWisp();
 
-    <form>
-        <input placeholder="Search the web freely">
-    </form>
-    <footer style="text-align: center;">
-        <span title="discord.gg/unblock">Ultraviolet &copy; TN 2023</span>
-    </footer>
-    <script src="uv/uv.bundle.js"></script>
-    <script src="uv/uv.config.js"></script>
-    <script>
-        // JSON data of bare servers
-        const bareServerData = {
-            "servers": [
-                "https://tomp.app/",
-                "https://phantomnetwork.cloud/bare/",
-                "https://artclass.site/bare/",
-                "wss://factwiki.me.cdn.cloudflare.net/wisp/"
-            ]
-        };
-
-        // Function to populate the dropdown menu
-        function populateDropdown() {
-            const select = document.getElementById('bareServerSelect');
-            const servers = bareServerData.servers;
-
-            servers.forEach((server) => {
-                const option = document.createElement('option');
-                option.value = server;
-                option.textContent = server;
-                select.appendChild(option);
-            });
-        }
-
-        // Event listener to handle user selection and console messages
-        document.getElementById('bareServerSelect').addEventListener('change', () => {
-            const selectedServer = document.getElementById('bareServerSelect').value;
-            console.log(`Selected server: ${selectedServer}`);
-            // You can take further action with the selected server here
-        });
-
-        // Populate the dropdown on page load
-        window.addEventListener('load', () => {
-            populateDropdown();
-            console.log('Dropdown menu populated.');
-        });
-    </script>
-    <script src="index.js"></script>
-</body>
-
-</html>
+  // Функция для запуска прокси (при нажатии на кнопку)
+  function launchProxy(url) {
+    setupWisp().then(() => {
+      const encodedUrl = __uv$config.prefix + __uv$config.encodeUrl(url);
+      
+      // Регистрация SW и переход
+      navigator.serviceWorker.register('./sw.js', {
+        scope: __uv$config.prefix
+      }).then(() => {
+        location.href = encodedUrl;
+      });
+    });
+  }
+</script>
