--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <select id="wispServerSelect">
         <option value="wss://factwiki.me.cdn.cloudflare.net/wisp/">FactWiki (Cloudflare)</option>
-        <option value="wss://wisp.mercurywork.shop/">Mercury (Publi)</option>
+        <option value="wss://wisp.mercurywork.shop/">Mercury (Publicel)</option>
     </select>
 
     <form id="proxyForm">
